fixed the sidebar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,8 @@
 
 html, body {
     text-rendering: optimizeLegibility;
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 html{
